gap fix

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header .container1 nav a:hover, header .container1 nav ul li.current_page_item a
     width: 880px;
     height: 450px;
     float: right;
-    margin-top:  22px;
+    margin-top:  0px;
 }
 .tcontainer .left .c1 {
     width: 428px;
@@ -313,7 +313,7 @@ header .container1 nav a:hover, header .container1 nav ul li.current_page_item a
     height: 450px;
     float: left;
     margin-right: 10px;
-    margin-top:  22px;
+    margin-top:  0px;
 }
 .right .hedr {
     margin: 0 auto;
@@ -497,7 +497,7 @@ header .container1 nav a:hover, header .container1 nav ul li.current_page_item a
 }
 .scontainer nav ul li {
     width: 380px;
-    height: 215px;
+    height: 200px;
     list-style: none;
     float: left;
     margin-right: 31px;
@@ -871,7 +871,7 @@ footer .container .rights {
     width: 1200px;
     height: auto;
     margin: 0 auto;
-    //padding-bottom: 90px;
+    border-top: 1px solid #1f1f24;
 }
 .fcontainer .title {
     margin: 0 auto;
@@ -895,7 +895,6 @@ footer .container .rights {
 .fcontainer .container {
     width: 100%;
     height: 400px;
-    border-top: 1px solid #1f1f24;
     overflow-y: scroll;
     outline: 0;
 }
@@ -903,6 +902,7 @@ footer .container .rights {
     width: 94%;
     height: 80px;
     margin-top: 10px;
+    margin-left: 6%;
 }
 .fcontainer .content .heading .button {
     width: 29px;
@@ -1436,7 +1436,7 @@ ul.slider {
     border-top: 1px solid #1f1f24;
 }
 .blogcontent .bleft {
-    margin-top: 30px;
+    margin-top: 0px;
     width: 560px;
     height: 90%;
     float: right;
@@ -1464,7 +1464,7 @@ ul.slider {
     padding: 0;
 }
 .blogcontent .bright {
-    margin-top: 30px;
+    margin-top: 0px;
     width: 612px;
     height: 90%;
     float: right;
@@ -1482,6 +1482,7 @@ ul.slider {
     font-size: 35px;
     margin: 0;
     padding-right: 20px;
+    line-height: 1;
 }
 .bright .bimage {
     width: 580px;
